--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "White-King-WhatsApp Bot -V1",
+  "name": "Toxic-Max",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/yawa107/CheemsBot-MD3",
   "logo": "https://pbs.twimg.com/media/FO7fojOakAAyYgt?format=jpg&name=900x900",
